<resources>
    <string name="app_name">SmartBUY</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Product details</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="loading">Loading data</string>
    <string name="error">Connection error</string>
    <string name="choose">Choose an item in the list to see the details</string>
</resources>
